[package]
name = "sysy_compiler"
version = "0.1.0"
edition = "2021"

[build-dependencies]
lalrpop = "0.19.7"

[dependencies]
lalrpop-util = { version = "0.19.7", features = ["lexer"] }
clap = { version = "=4.4.18", features = ["derive"] }
clap_builder = "=4.4.18"
clap_derive = "=4.4.7"
clap_lex = "=0.6.0"
libc = "=0.2"
chrono = "=0.4.41"
textwrap = "0.15.2"
tool = "0.2.1"
